# ppcplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: BuildDeps.cmake  Policies.cmake  Project.cmake
cmake/Toolchains/: mingw-i686.cmake
doc/: code_style.md  simplified_flow.md  winpthread-no-gettickcount64.patch
src/libplayer/: CMakeLists.txt
src/libplayer/ppcemu/: dummy.cpp  useful_links.md
src/ppcplayer/: CMakeLists.txt  main.cpp
